--- a/src/main/resources/templates/error/404.twig
+++ b/src/main/resources/templates/error/404.twig
@@ -4,8 +4,9 @@
 
 {% block stylesheets %}
     <style>
-        .h3 {
-            font-family: 'Nunito Sans', sans-serif;
+        .fa-spin {
+            -webkit-animation: fa-spin 4s infinite linear;
+            animation: fa-spin 4s infinite linear;
         }
     </style>
 {% endblock %}
