--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/dist/css/adminlte.min.css">
-    <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/plugins/sweetalert2/sweetalert2.min.css">
+{# <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/plugins/sweetalert2/sweetalert2.min.css"> #}
     <link rel="stylesheet" type="text/css"
           href="/webjars/AdminLTE/3.0.5/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
     <link href="/webjars/AdminLTE/3.0.5/plugins/toastr/toastr.min.css" rel="stylesheet">
@@ -311,7 +311,8 @@
 <script src="/webjars/AdminLTE/3.0.5/plugins/jquery/jquery.min.js"></script>
 <script src="/webjars/AdminLTE/3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/webjars/AdminLTE/3.0.5/dist/js/adminlte.min.js"></script>
-<script src="/webjars/AdminLTE/3.0.5/plugins/sweetalert2/sweetalert2.all.min.js"></script>
+{# <script src="/webjars/AdminLTE/3.0.5/plugins/sweetalert2/sweetalert2.all.min.js"></script> #}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.all.min.js"></script>
 <script src="/webjars/AdminLTE/3.0.5/plugins/toastr/toastr.min.js"></script>
 
 <script>
