--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="icheck-primary">
-                            <input id="remember-me" name="remember-me" type="checkbox">
+                            <input id="remember-me" name="remember-me" type="checkbox" checked="checked">
                             <label for="remember-me">
                                 Remember Me
                             </label>
